--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,8 @@ header nav ul li a {
 
 footer {
     background: #fce138;
-    width: 100%
-    padding 40px 35px;
+    width: 100%;
+    padding: 40px 35px;
 }
 footer h2 {
     display: inline;
