--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header nav ul li a {
 
 footer {
     background: #fce138;
-    width: 100%;
+    width: 100%; 
     padding: 40px 35px;
 }
 footer h2 {
@@ -59,3 +59,59 @@ footer div {
 footer a {
     color: #024e76;
 }
+section {
+    padding:60px;
+}
+/* Hero Style */
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height:600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+.hero-form {
+    background-color: #fce138;
+    color:#024e76;
+    padding: 20px;
+    width:500px;
+    /*Border*/
+    border-style: solid;
+    border-width: 3px;
+    border-color: #024e76;
+    position: absolute;
+    bottom:120px;
+    right:140px;
+}
+
+.hero-form h3{
+    margin:0;
+    font-size: 24px;
+}
+
+.hero-form p {
+   margin: 5px 0 15px 0;
+}
+.form-input {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    widows: 100%;
+    margin-bottom: 15px;
+}
+
+.hero-form label {
+    margin:0 5px;
+}
+
+.hero-form button {
+    color: #fce138;
+    background-color: #024e76;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;   
+}
+
+/* End of hero styles*/
