--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,3 +115,73 @@ section {
 }
 
 /* End of hero styles*/
+
+/* What you do*/
+
+.intro {
+    text-align:center;    
+}
+
+.intro h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom:35px;
+    padding:0 100px 20px 100px; /* Top right bottom left*/
+    border-bottom: 3px solid; /* This is what draws the cool line under the heade*/
+    border-color: #fce138;
+    display:inline-block; /*Inline for all padding and stuff, byt block means it like a block element*/
+}
+
+.intro p {
+    line-height:1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto; /* center elements that are less than 100% width*/
+}
+
+/*What we do*/
+.steps {
+    text-align: center;
+    background: #fce138;
+}
+
+.steps h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20x 100px;
+    border-bottom:3px solid;
+    border-color: #39a6b2;
+}
+.steps div {
+    margin-bottom: 80px;
+}
+
+.steps img {
+    width: 15%;
+    margin: 10px 0;
+}
+.steps p {
+    color: #39a6b2;
+    font-size: 23px;
+}
+.steps span {
+    font-size: 38px;
+}
+/* General classes that will be reused */
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+.secondary-border {
+    border-color: #39a6b2;
+}
