--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,21 +11,23 @@ body {
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
-
+    display: flex; /* Flexbox implimentation */
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin:0;
-    display: inline;
+   /*display: inline;removed for flexbox */
 }
 header a {
     text-decoration: none;
     color:#fce138;
 }
 header nav { 
-    float: right;
+    /* float: right; Flexbox */
     margin: 7px 0;
 }
 
