Added flexbox to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,13 @@ header nav {
     /* float: right; Flexbox */
     margin: 7px 0;
 }
+.header nav ul {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items:center;
+    list-style: none;
+}
 
 header nav ul li { 
     display: inline;
@@ -38,22 +45,25 @@ header nav ul li {
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
 }
 
 footer {
     background: #fce138;
     width: 100%; 
     padding: 40px 35px;
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 footer h2 {
-    display: inline;
+    /*display: inline; */
     color: #024e76;
     font-size:30px;
     margin:0;
 }
 footer div {
-    float: right;
+    /*float: right; */
     line-height: 1.5;
     text-align:right;
 }
