adjusted html to be more prepared to be mobile friendly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ section {
 /* What you do*/
 
 .intro {
-    text-align:center;    
+    /*text-align:center;*/    
 }
 
 .intro h2 {
@@ -169,11 +169,12 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto; /* center elements that are less than 100% width*/
+    text-align: center;
 }
 
 /*What we do*/
 .steps {
-    text-align: center;
+    /*text-align: center;*/
     background: #fce138;
 }
 
@@ -204,10 +205,14 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
+    /*margin-bottom: 35px;
     padding: 0 100px 20px 100px;
-    display: inline-block;
+    display: inline-block; */
     border-bottom: 3px solid;
+    padding-bottom:20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width:50%;
 }
 
 .primary-border {
@@ -219,7 +224,7 @@ section {
 
 /* Trainers */
 .trainers {
-    text-align: center;
+    /*text-align: center; */
 }
 
 .trainer {
@@ -249,6 +254,10 @@ section {
     text-align: right;
 }
 
+.flex-row {
+    display:flex;
+}
+
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -267,7 +276,7 @@ section {
 /*Reach Out*/
 .contact {
     background-color: #024e76;
-    text-align:center;
+    /*text-align:center;*/
 }
 
 .contact h2 {
