--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,25 +268,34 @@ section {
 /* Trainers */
 .trainers {
     /*text-align: center; */
+    width:100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+   /* width: 900px;
+    overflow:auto; /* Fixes having two things float*/
+    margin: 20px;
+    flex:1;
     background: #024e76;
     color: #fce138;
-    overflow:auto; /* Fixes having two things float*/
+
+   
 }
 
 .trainer img {
-    width: 35%;
-    float:left;
+    width: 100%;
+    /*float:left;*/
 }
 
 .trainer-bio {
-    padding: 35px;
-    float:left;
-    width:65%;
+    padding: 25px;
+    /*float:left;
+    width:65%;*/
+    line-height: 1.3;
 }
 
 .text-left{
@@ -302,18 +311,16 @@ section {
 }
 
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom:25px;
+    font-size: 22px;
+    margin-bottom:15px;
 }
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
 
 /*Reach Out*/
