--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -85,6 +85,7 @@ section {
     display:flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 .hero-form {
     background-color: #fce138;
@@ -118,6 +119,7 @@ section {
     color: #fff;
     font-size: 18px;
     color: #fce138;
+    line-height: 1.2;
 }
 .hero-cta h2 {
     font-style: italic;
@@ -246,7 +248,7 @@ section {
 }
 /* General classes that will be reused */
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     /*margin-bottom: 35px;
     padding: 0 100px 20px 100px;
@@ -397,3 +399,23 @@ section {
 
 }
   
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width:980px) {
+    header h1 a {
+        color:tomato;
+    }
+}
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width:768px){
+    header h1 {
+        font-size:80px;
+    }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    header h1 {
+      /* this will be applied on any screen smaller than 575px */
+      font-size: 100px;
+    }
+  }
