--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,6 +474,18 @@ section {
     }
 }
 
+/* CSS GRID FOR SERVICE COSTS */
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
     .hero-form button {
