--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,14 +477,34 @@ section {
 /* CSS GRID FOR SERVICE COSTS */
 .service-grid-container {
     display: grid;
+    max-width: 940px;
+    margin: 0 auto;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(3, 100px);
+    grid-gap: 10px;
 }
 
 .service-grid-item {
-    width: 200px;
-    height: 50px;
     background-color: orange;
     border: solid;
+    padding:1em;
     color: black;
+}
+
+/* You can declare size for each individual box*/
+.box1 {
+    grid-column:1/ span 1;
+    grid-row: 1/ span 2;
+}
+
+.box2 {
+    grid-column: 3/4;
+    grid-row: 1/-1;
+}
+
+.box3 {
+    grid-column: 2/ span 2;
+    grid-row: 3/ span 1;
 }
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
