Improved CSS and added button highlights

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,14 @@ header {
     display: flex; /* Flexbox implimentation */
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
+    position: -webkit-sticky;
+    top:0;
+
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1 {
     font-weight: bold;
@@ -21,6 +29,8 @@ header h1 {
     color: #fce138;
     margin:0;
    /*display: inline;removed for flexbox */
+   /* Text shadow */
+   text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 header a {
     text-decoration: none;
@@ -46,6 +56,14 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius:15px;
+    text-shadow:none;
 }
 
 footer {
@@ -79,7 +97,8 @@ section {
     background-image: url("../images/hero-bg.jpg");
     /*height:600px;*/
     background-size: cover;
-    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     /*position: relative;*/
     /*Add Flexbox*/
     display:flex;
@@ -88,7 +107,7 @@ section {
     align-items: flex-start;
 }
 .hero-form {
-    background-color: #fce138;
+    background-color:rgba(252, 225, 56, 0.8);
     color:#024e76;
     padding: 20px;
     /*width:500px;*/
@@ -100,7 +119,9 @@ section {
     bottom:120px;
     right:140px; */
     width:40%;
-    margin: 3.5%
+    margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    
 }
 
 .hero-form h3{
@@ -124,6 +145,7 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .form-input {
     border: 1px solid #024e76;
@@ -133,6 +155,13 @@ section {
     color: #024e76;
     widows: 100%;
     margin-bottom: 15px;
+    border-radius:10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline:none; /* Remove browser default outline*/
 }
 
 .hero-form label {
@@ -145,8 +174,12 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;   
+    border-radius:10px;
 }
 
+.hero-form button:hover {
+    background-color: #39a6b2;
+}
 /* End of hero styles*/
 
 /* What you do*/
@@ -179,12 +212,16 @@ section {
     margin:50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display:flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
+
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
+}
+
 .steps {
     /*text-align: center;*/
     background: #fce138;
@@ -387,7 +424,14 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius:10px;
+    background-color: rgba(255,255,255, 0.75);
 }
+.contact-form input:focus,.contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+}
+
 .contact-form button {
     width: 100%;
     border: none;
@@ -396,14 +440,20 @@ section {
     text-align: center;
     padding:15px 0;
     font-size: 16px;
+    border-radius:10px;
 
 }
   
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+}
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width:980px) {
     header {
         padding-bottom:0;
         justify-content:center;
+        position: relative;
     }
 
     header h1 {
