Replaced repeated colors with variables

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,20 @@
     padding:0;
     box-sizing:border-box;
 }
+
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+  }
 body {
     font-family: Arial, Helvetica, sans-serif;
-    color: #39a6b2;
+    color:var(--tertiary-color);
 }
 /* Header Css */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color:var(--tertiary-color);
     display: flex; /* Flexbox implimentation */
     justify-content: space-between;
     flex-wrap: wrap;
@@ -27,7 +33,7 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin:0;
    /*display: inline;removed for flexbox */
    /* Text shadow */
@@ -35,7 +41,7 @@ header h1 {
 }
 header a {
     text-decoration: none;
-    color:#fce138;
+    color:var(--primary-color);
 }
 header nav { 
     /* float: right; Flexbox */
@@ -61,14 +67,14 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius:15px;
     text-shadow:none;
 }
 
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%; 
     padding: 40px 35px;
     display:flex;
@@ -77,7 +83,7 @@ footer {
 }
 footer h2 {
     /*display: inline; */
-    color: #024e76;
+    color: var(--secondary-color);
     font-size:30px;
     margin:0;
 }
@@ -88,7 +94,7 @@ footer div {
 }
 
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 section {
     padding:60px;
@@ -109,13 +115,13 @@ section {
 }
 .hero-form {
     background-color:rgba(252, 225, 56, 0.8);
-    color:#024e76;
+    color:var(--secondary-color);
     padding: 20px;
     /*width:500px;*/
     /*Border*/
     border-style: solid;
     border-width: 3px;
-    border-color: #024e76;
+    border-color: var(--secondary-color);
     /*position: absolute;
     bottom:120px;
     right:140px; */
@@ -140,7 +146,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    color: #fce138;
+    color: var(--primary-color);
     line-height: 1.2;
 }
 .hero-cta h2 {
@@ -149,11 +155,11 @@ section {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     widows: 100%;
     margin-bottom: 15px;
     border-radius:10px;
@@ -170,8 +176,8 @@ section {
 }
 
 .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;   
@@ -179,7 +185,7 @@ section {
 }
 
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color:var(--tertiary-color);
 }
 
 .checkbox-wrapper input, .radio-wrapper input{
@@ -198,7 +204,7 @@ section {
     height:20px;
     width:20px;
     background:rgba(255,255,255,0.75);
-    border:1px solid #024e76;
+    border:1px solid var(--secondary-color);
     position: absolute;
     top:-4px;
     left:-30px;
@@ -213,19 +219,19 @@ section {
     width: 20px;
     height:20px;
     border-radius: 50%;
-    background:#024e76;
+    background:var(--secondary-color);
     position: absolute;
     left:-29px;
     top:-3px;
-    background-image: radial-gradient(circle,#39a6b2, #024e76)
+    background-image: radial-gradient(circle,#39a6b2, var(--secondary-color))
 }
 
 .checkbox-wrapper label::after {
     content:"";
     height: 6px;
     width:14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
@@ -250,17 +256,17 @@ section {
 
 .intro h2 {
     font-size: 55px;
-    color: #024e76;
+    color: var(--secondary-color);
     margin-bottom:35px;
     padding:0 100px 20px 100px; /* Top right bottom left*/
     border-bottom: 3px solid; /* This is what draws the cool line under the heade*/
-    border-color: #fce138;
+    border-color: var(--primary-color);
     display:inline-block; /*Inline for all padding and stuff, byt block means it like a block element*/
 }
 
 .intro p {
     line-height:1.7;
-    color: #39a6b2;
+    color:var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto; /* center elements that are less than 100% width*/
@@ -279,28 +285,28 @@ section {
 }
 
 .step:not(:last-child) {
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solidvar(--tertiary-color);
 }
 
 .steps {
     /*text-align: center;*/
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .steps h2 {
     font-size: 55px;
-    color: #024e76;
+    color: var(--secondary-color);
     margin-bottom: 35px;
     padding: 0 100px 20x 100px;
     border-bottom:3px solid;
-    border-color: #39a6b2;
+    border-color:var(--tertiary-color);
 }
 
 .step h3 {
     flex: 1 30%;
     /* Missing Stuff*/
     font-size: 40px;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 .steps div {
    /* margin-bottom: 80px;*/
@@ -311,13 +317,13 @@ section {
     margin: 10px 0; */
 }
 .step-text p {
-    color: #39a6b2;
+    color:var(--tertiary-color);
     font-size: 18px;
 }
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .step-info {
@@ -346,7 +352,7 @@ section {
 /* General classes that will be reused */
 .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     /*margin-bottom: 35px;
     padding: 0 100px 20px 100px;
     display: inline-block; */
@@ -358,10 +364,10 @@ section {
 }
 
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 .secondary-border {
-    border-color: #39a6b2;
+    border-color:var(--tertiary-color);
 }
 
 /* Trainers */
@@ -379,8 +385,8 @@ section {
     overflow:auto; /* Fixes having two things float*/
     margin: 20px;
     flex:1;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
 
    
 }
@@ -435,12 +441,12 @@ section {
 }
 
 .contact {
-    background-color: #024e76;
+    background-color: var(--secondary-color);
     /*text-align:center;*/
 }
 
 .contact h2 {
-    color:#fce138;
+    color:var(--primary-color);
 }
 
 .contact-info iframe {
@@ -459,7 +465,7 @@ section {
   }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
   }
   
@@ -472,15 +478,15 @@ section {
   }
   
   .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
   }
   
   .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size:16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -495,8 +501,8 @@ section {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding:15px 0;
     font-size: 16px;
@@ -505,8 +511,8 @@ section {
 }
   
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background:var(--tertiary-color);
 }
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width:980px) {
@@ -557,7 +563,7 @@ section {
 }
 /*Services CSS*/
 .services {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .service-grid-wrapper {
@@ -573,14 +579,14 @@ section {
     display: grid;
     grid-template-columns: 1fr repeat(2, 4fr);
     grid-template-rows: repeat(5, 1fr) 2fr;
-    border: 2px solid #024e76;
-    color: #024e76;
+    border: 2px solid var(--secondary-color);
+    color: var(--secondary-color);
     font-size: 1.2rem;
 }
 
 .service-grid-item {
     padding:15px 0;
-    border: 2px solid #024e76;
+    border: 2px solid var(--secondary-color);
     display:flex;
     align-items:center;
     justify-content: center;
